# Haskell-CI-CD-Engine

./: README.md  ci-cd-engine.cabal  docker-proxy.ps1  example-pipeline.json  example-pipeline.yaml  implementation_plan.md  report_template.md
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: ci-cd-engine-0.1.0.0-inplace.conf  package.cache
pgdata/: logfile  postgresql.conf  postmaster.opts
pgdata/base/1/: 1247  1259  13480  13484  13485  13494  13499  2579  2600_vm  2603_vm  2608_vm  2609  2609_vm  2618  2618_vm  2619  2619_fsm  2619_vm  2658  2667  2673  2679  2681  2682  2684  2696  2837  2838  2838_fsm  2838_vm  2840  2840_vm  2841  3079  3080  3081  3164  3394  3395  3456_fsm  (+6 more)
pgdata/base/16388/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13480  13480_fsm  13480_vm  13484  13485  13485_fsm  13485_vm  13489  13490  13490_fsm  13490_vm  13495  13495_fsm  13495_vm  13499  16389  16390  16396  16398  16399  16405  174  175  2224  2228  2337  (+190 more)
pgdata/base/4/: 1249  1249_vm  1255_vm  1259  1259_vm  13480_vm  13489  13490_vm  2601_vm  2606  2606_vm  2607_vm  2608  2610  2612_vm  2615_vm  2619  2659  2664  2691  2692  2693  2704  2836  2836_vm  2839  2840  3085  3455  3600  3603  3764  3764_vm  3766
pgdata/base/5/: 1255  1259  13490  13495  2602_vm  2605_vm  2610_vm  2612  2615  2616_vm  2617_vm  2619_fsm  2619_vm  2662  2663  2665  2666  2674  2675  2678  2685  2690  2696  2703  2753_vm  2840_vm  2841  3394_vm  3456  3456_vm  3541_vm  3601_vm  3602  3602_vm  3603_vm  3609  3767  pg_internal.init
pgdata/global/: 1213_vm  1260_vm  1261  1261_vm  1262  2396  2396_vm  2397  2671  2672  config_exec_params  pg_control  pg_internal.init
pgdata/pg_stat/: pgstat.stat
src/: Database.hs  Docker.hs  Server.hs  Types.hs  UI.hs
