cabal-version:      3.0
name:               ci-cd-engine
version:            0.1.0.0
synopsis:           Research-grade distributed CI/CD engine with Jenkins-style dashboard
license:            MIT
build-type:         Simple

common shared-deps
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        DeriveGeneric
        DerivingStrategies
        GeneralizedNewtypeDeriving
        StandaloneDeriving
        TypeFamilies
        GADTs
        FlexibleContexts
        FlexibleInstances
        MultiParamTypeClasses
        TypeOperators
        DataKinds
        ScopedTypeVariables
        RecordWildCards
        UndecidableInstances
        TemplateHaskell
        QuasiQuotes
    ghc-options: -Wall -Wcompat

library
    import:           shared-deps
    hs-source-dirs:   src
    exposed-modules:
        Types
        Database
        Docker
        UI
        Server
    build-depends:
        base                   >= 4.14 && < 5
      , aeson                  >= 2.0
      , async                  >= 2.2
      , bytestring             >= 0.11
      , containers             >= 0.6
      , http-client            >= 0.7
      , http-conduit           >= 2.3
      , http-types             >= 0.12
      , lucid                  >= 2.11
      , monad-logger           >= 0.3
      , mtl                    >= 2.2
      , persistent             >= 2.14
      , persistent-postgresql  >= 2.13
      , servant                >= 0.20
      , servant-lucid          >= 0.1
      , servant-server         >= 0.20
      , stm                    >= 2.5
      , text                   >= 2.0
      , time                   >= 1.11
      , wai                    >= 3.2
      , websockets             >= 0.12
      , yaml                   >= 0.11

executable ci-cd-engine
    import:           shared-deps
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:
        base                   >= 4.14 && < 5
      , ci-cd-engine
      , async                  >= 2.2
      , bytestring             >= 0.11
      , containers             >= 0.6
      , monad-logger           >= 0.3
      , persistent-postgresql  >= 2.13
      , stm                    >= 2.5
      , text                   >= 2.0
      , wai                    >= 3.2
      , wai-websockets         >= 3.0
      , warp                   >= 3.3
      , websockets             >= 0.12
